// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JS based ESM > GIVEN no plugin options THEN injects version 1`] = `
"const version = '0.0.5';

export { version };
"
`;

exports[`JS based ESM > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"const version = '2022-02-01T14:30:30.000Z';

export { version };
"
`;
